[package]
name = "lise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
simple_logger = "4.3.3"
winit = { version = "0.29.15", default-features = false, features = [ "rwh_05" ] }
raw-window-handle = "0.5.2"
ash = "0.37.3"
ash-window = "0.12.0"
