[package]
name = "lise"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
simple_logger = "5.0.0"
simple-window = "0.2.2"
raw-window-handle = "0.6.1"
ash = "0.38.0+1.3.281"
ash-window = "0.13.0"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.117"
